--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,24 @@
-# .github/workflows/ci.yml
-name: Go CI
+name: Go
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.22.3' # Go versiyasini o'zgartiring
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.22.3'
 
-      - name: Run tests
-        run: go test ./...
+    - name: Build
+      run: go build -v ./...
 
-      - name: Build
-        run: go build -o myapp .
-
-      - name: Check binary
-        run: |
-          if [ ! -f myapp ]; then
-            echo "Binary not created!"
-            exit 1
-          fi
+    - name: Test
+      run: go test -v ./...
